// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultMetrics displays withdrawable tokens 1`] = `
<div>
  <div
    class="MuiGrid-root-11 makeStyles-root-1 MuiGrid-container-12"
  >
    <h6
      class="MuiTypography-root-114 makeStyles-title-7 MuiTypography-h6-124"
    >
      Vault Details
    </h6>
    <hr
      class="MuiDivider-root-146 WithStyles(ForwardRef(Divider))-root-144 WithStyles(ForwardRef(Divider))-root-145"
    />
    <p
      class="MuiTypography-root-114 makeStyles-amount-153 MuiTypography-body1-116"
    >
      $
      135,697,015
    </p>
    <p
      class="MuiTypography-root-114 makeStyles-assetsText-10 MuiTypography-body2-115"
    >
      Assets Deposited
    </p>
    <div
      class="makeStyles-submetric-4"
    >
      <span
        class="MuiTypography-root-114 makeStyles-submetricValue-5 MuiTypography-caption-117"
      >
        8/5/2022, 1:58:23 PM
      </span>
      <span
        class="MuiTypography-root-114 makeStyles-submetricType-6 MuiTypography-caption-117"
      >
        last harvest time
      </span>
    </div>
    <div
      class="makeStyles-submetric-4"
    >
      <span
        class="MuiTypography-root-114 makeStyles-submetricValue-5 MuiTypography-caption-117"
      >
        1.0082
      </span>
      <span
        class="MuiTypography-root-114 makeStyles-submetricType-6 MuiTypography-caption-117"
      >
        tokens per share
      </span>
    </div>
    <div
      class="makeStyles-submetric-4"
    >
      <span
        class="MuiTypography-root-114 makeStyles-submetricValue-5 MuiTypography-caption-117"
      >
        100.00000
      </span>
      <span
        class="MuiTypography-root-114 makeStyles-submetricType-6 MuiTypography-caption-117"
      >
        tokens withdrawable
      </span>
    </div>
  </div>
</div>
`;

exports[`VaultMetrics renders correctly 1`] = `
<div>
  <div
    class="MuiGrid-root-11 makeStyles-root-1 MuiGrid-container-12"
  >
    <h6
      class="MuiTypography-root-114 makeStyles-title-7 MuiTypography-h6-124"
    >
      Vault Details
    </h6>
    <hr
      class="MuiDivider-root-146 WithStyles(ForwardRef(Divider))-root-144 WithStyles(ForwardRef(Divider))-root-145"
    />
    <p
      class="MuiTypography-root-114 makeStyles-amount-153 MuiTypography-body1-116"
    >
      $
      135,697,015
    </p>
    <p
      class="MuiTypography-root-114 makeStyles-assetsText-10 MuiTypography-body2-115"
    >
      Assets Deposited
    </p>
    <div
      class="makeStyles-submetric-4"
    >
      <span
        class="MuiTypography-root-114 makeStyles-submetricValue-5 MuiTypography-caption-117"
      >
        8/5/2022, 1:58:23 PM
      </span>
      <span
        class="MuiTypography-root-114 makeStyles-submetricType-6 MuiTypography-caption-117"
      >
        last harvest time
      </span>
    </div>
    <div
      class="makeStyles-submetric-4"
    >
      <span
        class="MuiTypography-root-114 makeStyles-submetricValue-5 MuiTypography-caption-117"
      >
        1.0082
      </span>
      <span
        class="MuiTypography-root-114 makeStyles-submetricType-6 MuiTypography-caption-117"
      >
        tokens per share
      </span>
    </div>
  </div>
</div>
`;
